add mail sender, unit tests
